# Syngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  task.yaml
.github/tmp/: stale.yaml
.github/workflows/: ci.yml  format.yml  gen-docs.yaml  stale.yaml  sync.yaml  tests.yml
cmake/: ApplyPatches.cmake  CompileMeshes.cmake  CompileShaders.cmake  FileBundle.cmake  GameConfig.cmake  SyngineGame.cmake  clangd.cmake  clangdConfig.cmake  versioning.cmake
default/shaders/: billboard.vert.sc  common.bgsl  common.sh  debug.frag.sc  debug.vert.sc  default.frag.bgsl  default.frag.sc  default.vert.bgsl  default.vert.sc  default_billboard.frag.bgsl  default_billboard.frag.sc  default_billboard.vert.bgsl  default_billboard.vert.sc  default_debug.frag.bgsl  default_debug.vert.bgsl  default_debug_billboard.frag.sc  default_shadow.frag.bgsl  default_shadow.frag.sc  default_shadow.vert.bgsl  default_shadow.vert.sc  default_sky.frag.bgsl  default_sky.frag.sc  default_sky.vert.bgsl  default_sky.vert.sc  default_texture.frag.bgsl  default_texture.frag.sc  default_texture.vert.bgsl  shadow.bgsl  shadow.sh  ssao.frag.bgsl  ssao.frag.sc  ssao.vert.bgsl  ssao.vert.sc  ssao_blur.frag.bgsl  ssao_blur.frag.sc  texture.frag.sc  texture.vert.sc  tonemapping.frag.bgsl  tonemapping.frag.sc  tonemapping.vert.sc
default/shaders/varying/: debug.vary.sc  default.vary.bgsl  default.vary.sc  default_billboard.vary.bgsl  default_billboard.vary.sc  default_debug.vary.bgsl  default_sky.vary.bgsl  default_texture.vary.bgsl  default_texture.vary.sc  ssao_blur.vary.sc  texture.vary.sc  tonemapping.vary.bgsl
docs/: assets_xcassets.sh  index.md  install_unix.sh  install_win.bat  policy.md  start.md
docs/api/: basicinput_doc.md  billboardcomponent_doc.md  cameracomponent_doc.md  component_doc.md  componentregistry_doc.md  core_doc.md  debugrenderer_doc.md  fsutils_doc.md  gameobject_doc.md  helpers_doc.md  input_doc.md  logger_doc.md  luamanager_doc.md  matrix3x3.h_doc.md  matrix3x3_doc.md  matrix4x4.h_doc.md  matrix4x4_doc.md  meshcomponent_doc.md  metalbridge_doc.md  modelloader_doc.md  physics_doc.md  playercomponent_doc.md  profiler_doc.md  quaternion.h_doc.md  quaternion_doc.md  ray_doc.md  registry_doc.md  rendercore_doc.md  renderer_doc.md  rigidbodycomponent_doc.md  serializer_doc.md  shaders_doc.md  texturehelpers_doc.md  transformcomponent_doc.md  vector2.h_doc.md  vector2_doc.md  vector3_doc.md  vector4.h_doc.md  vector4_doc.md  windowing_doc.md  (+2 more)
docs/concepts/: gameobjects.md
docs/guides/: components.md  first-game.md  lua-scripting.md  prefab.md  profiler.md
docs/lua/: blacklist.txt  docgen.lua  failed.txt  main.lua  mdgen.lua  searchbox.txt  start.txt  toc.txt
include/: Components.h  Input.h  Registry.h  ShaderUtils.h  SynComponents.h  SynModelLoader.h  SyngineCore.h  SyngineDebug.h  SyngineGameobject.h  SyngineGraphics.h  SyngineLogger.h  SynginePhys.h  defines.h  helpers.h  module.modulemap
include/Syngine/: Syngine.h
include/Syngine/Core/: BasicInput.h  Core.h  Input.h  Logger.h  LuaManager.h  Registry.h  TempInput.h
include/Syngine/ECS/: AllComponents.h  Component.h  ComponentRegistry.h  GameObject.h
include/Syngine/Graphics/: Renderer.h  Shaders.h  Windowing.h
include/Syngine/Math/: Math.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Ray.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Syngine/Physics/: Physics.h
include/Syngine/Utils/: Helpers.h  ModelLoader.h  Profiler.h  Serializer.h
lib/: CMakeLists.txt  miniscl.hpp  sal.h
lib/lua/: README  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcorolib.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lgc.c  liolib.c  llex.c  llimits.h  lmathlib.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopnames.h  loslib.c  lstate.c  lstate.h  lstring.c  lstrlib.c  ltablib.c  ltm.c  lua.c  luaconf.h  lundump.c  lutf8lib.c
lib/lua/doc/: manual.html
src/: FsUtils.cpp  FsUtils.h  Input.cpp  Registry.cpp  ShaderUtils.h  SynModelLoader.cpp  SynModelLoader.h  SynOSXMetalBridge.h  SynOSXMetalBridge.mm  SyngineCore.cpp  SyngineCore.h  SyngineDebug.cpp  SyngineGameobjects.cpp  SyngineGraphics.cpp  SyngineGraphics.h  SyngineLogger.cpp  SynginePhys.cpp  helpers.cpp  main.cpp  syngine.cpp  syngine.h
src/Components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PhysComponent.cpp  PhysComponent.h  PlayerComponent.cpp  PlayerComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  TransformComponent.cpp  TransformComponent.h
src/Syngine/Core/: BasicInput.cpp  Core.cpp  Entry.cpp  Input.cpp  InputHelpers.h  Logger.cpp  LuaManager.cpp  Registry.cpp  TempInput.cpp  ZoneManager.cpp  ZoneManager.h
src/Syngine/ECS/: ComponentRegistry.cpp  GameObject.cpp
src/Syngine/Graphics/: DebugRenderer.cpp  DebugRenderer.h  MetalBridge.h  MetalBridge.mm  RenderCore.cpp  RenderCore.h  Renderer.cpp  Shaders.h  TextureHelpers.cpp  TextureHelpers.h  (+1 more)
test/: main.cpp
testgame/: .clang-format  .editorconfig  CMakeLists.txt  bgfxshaderc.cmake  clangdConfig.cmake
testgame/meshes/: sphere.glb
testgame/shaders/: billboard.vert.sc  debug.frag.sc  debug.vert.sc  default.vary.sc  sky.frag.sc
testgame/shaders/varying/: sky.vary.sc
testgame/src/: info.plist.in  main.cpp
testgame/src/res/: app.rc  bakerman.desktop.in
testgame/src/res/bakerman.icon/: icon.json
tests/: CMakeLists.txt  defines.h
tests/Core/: StartStop.cpp
tests/ECS/: AddRemoveComponents.cpp  EntityDeletion-Queries.cpp  GameObjectLifecycle.cpp  TransformHierarchy.cpp  Zones.cpp
tests/Input/: Binding.cpp
tests/Lua/: Bindings.cpp  ScriptLoading.cpp
tests/Math/: Matrices.cpp  Quaternion.cpp  Vectors.cpp
tests/Physics/: PhysicsSync.cpp  RigidbodyCreation.cpp
tests/Serialization/: ObjectRoundTrip.cpp
tests/testgame/: CMakeLists.txt  CompileShaders.cmake
tests/testgame/shaders/: sky.vert.sc
tests/testgame/src/: info.plist.in
(+32 files in other folders)
